Add Maven run configuration