@@ -26,6 +26,7 @@
         <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
         <exec-maven-plugin.version>3.6.3</exec-maven-plugin.version>
         <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>
+        <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
         <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
         <maven-checkstyle.version>13.4.0</maven-checkstyle.version>
 
@@ -184,6 +185,11 @@
                     <version>${build-helper-maven-plugin.version}</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>${javafx-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
                     <version>${versions-maven-plugin.version}</version>
@@ -292,6 +298,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>name.ulbricht.dlx/name.ulbricht.dlx.Main</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>-Djavafx.preloader=name.ulbricht.dlx.ui.SplashPreLoader</option>
+                    </options>
+                </configuration>
             </plugin>
 
             <plugin>
